updated pictures and talks

--- a/index.html
+++ b/index.html
@@ -71,34 +71,28 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
     <section id="panel-2"><main>
             <p></p>
           <ol class="homepage-list">
-              <li><b>"What does the A2 singularity have in common with an octopus?🐙"</b>, <a href="https://hodge.maths.ed.ac.uk/tiki/Hodge+Club">Hodge Club Seminar</a>. <sc style="font-size:small">[oct 6, '23]</sc></li>
-              <li><b>"Quivers and stability"</b>, ahead of <a href="https://sites.google.com/view/ed-heng">Edmund Heng</a>: "Fusion categories and quantum symmetries", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[sep 25, '23]</sc></li>
+              <li><b>"Geometers' retelling of the K(π,1) story"</b>, <a href="https://www.mfo.de/occasion/2405a/www_view">Artin groups meet triangulated categories,</a> Oberwolfach. <sc style="font-size:small">[jan 30, '24]</sc></li>
+              <li><b>"What does the A2 singularity have in common with an octopus?🐙"</b>, <a href="https://hodge.maths.ed.ac.uk/tiki/Hodge+Club">Hodge Club Seminar,</a> Edinburgh. <sc style="font-size:small">[oct 6, '23]</sc></li>
               <li><b>"What do coxeter groups know about homological algebra?"</b>, the 61st <a href="https://hodge.maths.ed.ac.uk/tiki/ARTIN">ARTIN</a>  meet. <sc style="font-size:small">[sep 12, '23]</sc></li>
-              <li><b>"Bondal and Orlov's reconstruction of a variety from its derived category"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[jul 28, '23]</sc></li>
-              <li><b>"Coherent sheaves on the Riemann Sphere"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[jun 9, '23]</sc></li>
-              <li><b>"Singularities of the minimal model program"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[apr 28, '23]</sc></li>
-              <li><b>"Representation theory of finite dimensional algebras"</b>,  ahead of Isambard Goodbody: "Finite dimensional DGAs", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[apr 26, '23]</sc></li>
-              <li><b>"Associated points and other properties of schemes"</b>, <a href="https://malthefogsporring.github.io/algebraic-geometry/">Eisenboaties</a>. <sc style="font-size:small">[apr 14, '23]</sc></li>
-              <li><b>"Log Calabi-Yau and cluster varieties"</b>,  ahead of <a href="https://www.kcl.ac.uk/people/tim-magee">Tim Magee</a>: "Grassmannians, plabic graphs, and mirror symmetry for cluster varieties", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[mar 22, '23]</sc></li>
-              <li><b>"Quiver moduli and geometric invariant theory"</b>, <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>. <sc style="font-size:small">[mar 3, '23]</sc></li>
               <li><b>"This pure mathematician forgot how to add. You won't believe what happened next!"</b>,  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>. <sc style="font-size:small">[mar 10, '23]</sc></li>
-              <li><b>"Moduli spaces, G-clusters, and the McKay correspondence"</b>, ahead of <a href="https://ncts.ntu.edu.tw/people_detail.php?gid=361&bgid=7">Ryo Yamagishi</a>: "McKay Correspondence and the Moduli of G-Constellations", <a href="https://sites.google.com/view/glasgowalgebrapreseminar">Glasgow Algebra Pre-Seminar</a>. <sc style="font-size:small">[feb 1, '23]</sc></li>
-              <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase</a>. <sc style="font-size:small">[dec 9, '22]</sc></li>
-              <li><b>The module extension problem</b>, Part III Seminar. <sc style="font-size:small">[mar 18, '22]</sc></li>
-              <li><b>The functor of points</b>, Part III Seminar. <sc style="font-size:small">[dec 2, '21]</sc></li>
+              <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase,</a> Edinburgh. <sc style="font-size:small">[dec 9, '22]</sc></li>
+              <li><b>The module extension problem</b>, Part III Seminar, Cambridge <sc style="font-size:small">[mar 18, '22]</sc></li>
+              <li><b>The functor of points</b>, Part III Seminar, Cambridge <sc style="font-size:small">[dec 2, '21]</sc></li>
               <li><b>Quasisymmetric functions in geometry</b>, <a href="https://www.maths.cam.ac.uk/opportunities/careers-for-mathematicians/summer-research-mathematics/information-for-students">CSRIM</a> Seminar. <sc style="font-size:small"><a href="documents/2021-summer-project-slides.pdf">[slides]</a> [oct 12, '21]</sc></li>
               <li><b>Between arbitrarily large and infinite</b>, <a href="https://archim.org.uk">The Archimedeans</a>. <sc style="font-size:small"><a href ="https://youtu.be/fkfRrVVX-Kc">[video]</a> [apr 10, '20]</sc></li>
           </ol>
+
+          I have also given multiple talks for the <a href="https://sites.google.com/view/glasgowalgebrapreseminar/home?authuser=0">Glasgow Algebra Pre-Seminar</a> and the <a href="https://sites.google.com/view/erngglasgow/wee-math-seminar">Wee Math Seminar</a>.
     </main> </section>
     <section id="panel-3"><main>
           <p>Past and upcoming conferences and academic workshops .</p>
           <ol class="homepage-list">
-              <li><b><!--a href=""-->Mini-workshop 2405a: Artin groups meet triangulated categories</a></b>, Oberwolfach. <sc style="font-size:small">[jan 28--feb 2, '24]</sc></li>
-              <li><b><a href="https://www.ukagnetwork.org/upcoming-activities/warwick-december-2023">UKAGNetwork winter school</a></b>, Warwick. <sc style="font-size:small">[dec 12--15, '23]</sc></li>
+              <li><b><a href="https://www.mfo.de/occasion/2405a/www_view">Mini-workshop 2405a: Artin groups meet triangulated categories</a></b>, Oberwolfach. <sc style="font-size:small">[jan 28--feb 2, '24]<a href="./images/conf-ober-2024.jpeg">[photo]</a></sc></li>
+              <li><b><a href="https://www.ukagnetwork.org/past-activities/warwick-december-2023">UKAGNetwork winter school</a></b>, Warwick. <sc style="font-size:small">[dec 12--15, '23]</sc></li>
               <li><b><a href="https://pcwww.liv.ac.uk/~arizzard/GLEN/GLEN2023.html">GLEN workshop on stability conditions</a></b>, Liverpool. <sc style="font-size:small">[sep 21--22, '23]</sc></li>
-              <li><b><a href="https://www.liverpool.ac.uk/mathematical-sciences/research/pure-mathematics/research/dynamical-systems/bridgeland-stability/">Bridgeland stability spaces and complex function theory</a></b>, Liverpool. <sc style="font-size:small">[sep 19--21, '23]</sc></li>
+              <li><b><a href="https://www.liverpool.ac.uk/mathematical-sciences/research/pure-mathematics/research/dynamical-systems/bridgeland-stability/">Bridgeland stability and complex function theory</a></b>, Liverpool. <sc style="font-size:small">[sep 19--21, '23]</sc></li>
               <!--<li><b><a href="https://conferences.cirm-math.fr/2849.html">Categories and stacks in algebraic geometry and algebraic topology (CATS 7)</a></b>, CIRM (Marseille). <sc style="font-size:small">[oct 16--20, '23][TBC]</sc></li>-->
-              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23]</sc><a href="./images/conf-nordfjordeid-2023.jpeg-2023.jpg">[photo]</a></sc></li>
+              <li><b><a href="https://wiki.math.ntnu.no/nordfjordeid2023">Summer school on higher structures in algebra and geometry</a></b>, Nordfjordeid. <sc style="font-size:small">[aug 13--18, '23]<a href="./images/conf-nordfjordeid-2023.jpeg">[photo]</a></sc></li>
               <li><b><a href=" https://sites.google.com/view/derivedfrg/events/imperial-2023?authuser=0">Derived categories, moduli spaces, and counting invariants</a></b>, London. <sc style="font-size:small">[jul 3--7, '23]</sc></li>
               <li><b><a href="https://sites.google.com/sheffield.ac.uk/glen2023/home">Derived categories, Hodge theory, and singularities</a></b>, Sheffield. <sc style="font-size:small">[jun 28--30, '23]</sc></li>
               <li><b><a href="https://sites.google.com/view/warwickcompalggeom/home">Computational algebraic geometry workshop</a></b>, Warwick. <sc style="font-size:small">[mar 27--31, '23]<a href="./images/conf-warwick-2023.jpg">[photo]</a></sc></li>
@@ -110,7 +104,7 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
     <section id="panel-4"><main>
             <p></p>
             <ol class="homepage-list">
-                <li><b>Tutor, University of Glasgow:</b> 2A Multivariable calculus ('23), 2B Linear algebra ('23), 2P Graph theory ('23), 2T Discrete Mathematics ('22), 2E Mechanics ('22).</li>
+                <li><b>Tutor, University of Glasgow:</b> 3 Metric and topological spaces ('24), 2A Multivariable calculus ('23), 2B Linear algebra ('23), 2P Graph theory ('23), 2T Discrete Mathematics ('22), 2E Mechanics ('22).</li>
                 <li><b>Mentor, STEP Support Programme</b> ('19, '20, '21).</li>
                 <li><b>Tutor, <a href ="https://www.undergraduate.study.cam.ac.uk/events/summer-schools">Sutton Trust Summer School</a>:</b> Combinatorics ('19).</li>
                 <li><b>Teacher, <a href = "https://fia.edu.in">Fravashi International Academy</a>:</b> A level Pure mathematics ('19), A level Statistics ('19).</li>
