--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
     <section id="panel-3"><main>
           <p>Past and upcoming conferences and academic workshops .</p>
           <ol class="homepage-list">
+              <li><b><a href="https://www.lancaster.ac.uk/maths/research/conferences/stability/">Simple-mindedness, silting, and stability</a></b>, Cumbria. <sc style="font-size:small">[jul 8--12, '24]</sc></li>
+              <li><b><a href="https://sites.google.com/view/6thbragmeeting/home">The 6th British algebraic geometry meeting</a></b>, Sheffield. <sc style="font-size:small">[apr 10--12, '24]<a href="./images/conf-brag-2024.jpg">[photo]</a></sc></li>
               <li><b><a href="https://www.mfo.de/occasion/2405a/www_view">Mini-workshop 2405a: Artin groups meet triangulated categories</a></b>, Oberwolfach. <sc style="font-size:small">[jan 28--feb 2, '24]<a href="./images/conf-ober-2024.jpeg">[photo]</a></sc></li>
               <li><b><a href="https://www.ukagnetwork.org/past-activities/warwick-december-2023">UKAGNetwork winter school</a></b>, Warwick. <sc style="font-size:small">[dec 12--15, '23]</sc></li>
               <li><b><a href="https://pcwww.liv.ac.uk/~arizzard/GLEN/GLEN2023.html">GLEN workshop on stability conditions</a></b>, Liverpool. <sc style="font-size:small">[sep 21--22, '23]</sc></li>
