added cambridge jgs talk

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gla
             <p></p>
           <ol class="homepage-list">
               <li><b>"Geometers' retelling of the K(π,1) story"</b>, <a href="https://www.mfo.de/occasion/2405a/www_view">Artin groups meet triangulated categories,</a> Oberwolfach. <sc style="font-size:small">[jan 30, '24]</sc></li>
-              <li><b>"What does the A2 singularity have in common with an octopus?🐙"</b>, <a href="https://hodge.maths.ed.ac.uk/tiki/Hodge+Club">Hodge Club Seminar,</a> Edinburgh. <sc style="font-size:small">[oct 6, '23]</sc></li>
+              <li><b>"What does the A2 singularity have in common with an octopus?🐙"</b>, Junior Geometry Seminar, Cambridge <sc style="font-size:small">[feb 23, '24]</sc> and <a href="https://hodge.maths.ed.ac.uk/tiki/Hodge+Club">Hodge Club Seminar,</a> Edinburgh. <sc style="font-size:small">[oct 6, '23]</sc></li>
               <li><b>"What do coxeter groups know about homological algebra?"</b>, the 61st <a href="https://hodge.maths.ed.ac.uk/tiki/ARTIN">ARTIN</a>  meet. <sc style="font-size:small">[sep 12, '23]</sc></li>
               <li><b>"This pure mathematician forgot how to add. You won't believe what happened next!"</b>,  <a href="https://sites.google.com/view/pgseminar/home?authuser=0 ">Glasgow PG Seminar</a>. <sc style="font-size:small">[mar 10, '23]</sc></li>
               <li><b>What is a deformation?</b> <a href="https://www.glams.org/2022-cohort">GLaMS Examples Showcase,</a> Edinburgh. <sc style="font-size:small">[dec 9, '22]</sc></li>
