added japan talks

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gea
     <section id="panel-2"><main>
             <p></p>
           <ol class="homepage-list">
+              <li><b>"Drifting towards rational curves"</b>, <a href="http://research.ipmu.jp/seminar/?mode=seminar_recent">Mathematics--String theory seminar,</a> Kavli IPMU, University of Tokyo. <sc style="font-size:small">[apr 22, '24]</sc></li>
+              <li><b>"Drifting towards rational curves"</b>, Algebraic geometry seminar, Tokyo Metropolitan University. <sc style="font-size:small">[apr 18, '25]</sc></li>
+              <li><b>"Torsion pairs for McKay quivers"</b>, <a href="https://www.math.nagoya-u.ac.jp/~aaron.chan/TNAseminar.html">Tokyo--Nagoya algebra seminar,</a> University of Tokyo. <sc style="font-size:small">[apr 15, '24]</sc></li>
+              <li><b>"Everything about small McKay quivers"</b>, Algebraic geometry seminar, Tokyo Metropolitan University. <sc style="font-size:small">[apr 14, '25]</sc></li>
+              <li><b>"Heart-to-heart on rational curves"</b>, <a href="https://calfseminar.weebly.com">Calf seminar,</a> Nottingham. <sc style="font-size:small">[mar 26, '25]</sc></li>
+              <li><b>"How algebraic geometry is pushing tilting theory to its limits"</b>, <a href="https://www.liverpool.ac.uk/mathematical-sciences/seminars/pure-mathematics/">Algebraic geometry seminar,</a> University of Liverpool. <sc style="font-size:small">[mar 20, '25]</sc></li>
               <li><b>"Octopi, squids, and the A2 McKay quiver"</b>, <a href="https://www.lancaster.ac.uk/maths/research/conferences/stability/">Simple-mindedness, silting, and stability,</a> Cumbria. <sc style="font-size:small">[jul 9, '24]</sc></li>
               <li><b>"Geometers' retelling of the K(π,1) story"</b>, <a href="https://www.mfo.de/occasion/2405a/www_view">Artin groups meet triangulated categories,</a> Oberwolfach. <sc style="font-size:small">[jan 30, '24]</sc></li>
               <li><b>"What does the A2 singularity have in common with an octopus?🐙"</b>, Junior Geometry Seminar, Cambridge <sc style="font-size:small">[feb 23, '24]</sc> ; <a href="https://hodge.maths.ed.ac.uk/tiki/Hodge+Club">Hodge Club Seminar,</a> Edinburgh. <sc style="font-size:small">[oct 6, '23]</sc></li>
@@ -94,6 +100,7 @@ This year, I am a co-organiser of the <a href="https://sites.google.com/view/gea
     <section id="panel-3"><main>
           <p>Past and upcoming conferences and academic workshops .</p>
           <ol class="homepage-list">
+              <li><b><a href="https://sites.google.com/view/akira-ishii-60/">McKay correspondence, dimer model, and derived category (Ishii60)</a></b>, Nagoya. <sc style="font-size:small">[apr 7--9, '25]</sc></li>
               <li><b><a href="https://www.ukagnetwork.org/upcoming-activities/lancaster-december-2024">UKAGNetwork winter school</a></b>, Lancaster. <sc style="font-size:small">[dec 16--20, '24]</sc></li>
               <li><b><a href="https://www.lancaster.ac.uk/maths/research/conferences/stability/">Simple-mindedness, silting, and stability</a></b>, Cumbria. <sc style="font-size:small">[jul 8--12, '24]</sc><sc style="font-size:small"><a href="./images/conf-ambleside-2024.jpg">[photo]</a></sc></li>
               <li><b><a href="https://sites.google.com/view/6thbragmeeting/home">The 6th British algebraic geometry meeting</a></b>, Sheffield. <sc style="font-size:small">[apr 10--12, '24]<a href="./images/conf-brag-2024.jpg">[photo]</a></sc></li>
