changed whitespace and made first link more apparent

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: What is Parth up to?
 <div class="aestheticGap"></div>
 
 <p class="text">
-	<span class="dropthis">I am <b>Parth</b>,</span> <br class="smallscreen"><br class="smallscreen"><br class="smallscreen">a PhD student in mathematics and a member of <a href="https://www.maths.gla.ac.uk/core/Welcome">Core Structures</a> at the <a href="https://www.gla.ac.uk">University of Glasgow</a>. You can read more about me <a href="./about.html">here</a>.
+	<span class="dropthis">I am <b>Parth</b>,</span> <br class="smallscreen"><br class="smallscreen"><br class="smallscreen">a PhD student in mathematics and a member of <a href="https://www.maths.gla.ac.uk/core/Welcome">Core Structures</a> at the <a href="https://www.gla.ac.uk">University of Glasgow</a>. You can read more about me ‹<a href="./about.html">here</a>›.
 </p>
 <p>
 I work with <a href="https://www.maths.gla.ac.uk/~mwemyss/">Michael Wemyss</a>
