added malga talk

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ and <a
 href="https://en.wikipedia.org/wiki/Bridgeland_stability_condition">stability
 manifolds</a> -- here is a <a href="documents/2025-rationalcurve-poster.pdf">poster</a> explaining some of my recent work.
 </p>
-<p>I will be available for postdoctoral jobs in the coming year, here is my <a href="https://thecatbus.github.io/curriculum-vitae/main.pdf">CV</a>.</p>
 
 <hr class="phone-only">
 
@@ -58,7 +57,7 @@ manifolds</a> -- here is a <a href="documents/2025-rationalcurve-poster.pdf">pos
               <li><b>Torsion pairs and 3-fold flops</b>, <i>preprint</i> ('25). <sc style="font-size:small"><a href="documents/2025-torsionpairs-3foldflops.pdf">[PDF]</a><a href="https://doi.org/10.48550/arXiv.2502.05146">[DOI]</a></li></sc>
           </ol>
           <p>The articles below are largely expository.</p>
-          <ol class="homepage-list" start="3">
+          <ol class="homepage-list" start="4">
               <li><b>"Geometers' twisted retelling of the K(π,1) story"</b>, <i>Report for the Oberwolfach mini-workshop 2405a</i>, pp. 212--213 ('24). <sc style="font-size:small"><a href="https://publications.mfo.de/bitstream/handle/mfo/4112/OWR_2024_04.pdf?sequence=4&isAllowed=y">[PDF]</a><a href="https://doi.org/10.14760/OWR-2024-4">[DOI]</a></sc></li>
               <li><b>"Homological mirror symmetry for projective spaces"</b> ('24). <sc><a href="documents/2024-explicit-hms.pdf" style="font-size:small">[PDF]</a></sc></li>
               <li><b>"A quick introduction to complex tori"</b> ('23). <sc><a href="documents/2023-complex-tori.pdf" style="font-size:small">[PDF]</a></sc></li>
@@ -71,6 +70,7 @@ manifolds</a> -- here is a <a href="documents/2025-rationalcurve-poster.pdf">pos
     <section id="panel-2"><main>
             <p></p>
           <ol class="homepage-list">
+               <li><b>"Pushing tilting theory to its limits"</b>, <a href="https://malga.art/seminar/2026-01/shimpi/">MAlgA seminar,</a> Università di Verona. <sc style="font-size:small">[jan 14, '26]</sc></li>
               <li><b>"It's supported on P1, how complicated could it be?"</b>, <a href="https://talks.cam.ac.uk/talk/index/239641">Algebraic geometry seminar,</a> University of Cambridge. <sc style="font-size:small">[nov 05, '25]</sc></li>
               <li><b>"Drifting towards rational curves"</b>, <a href="http://research.ipmu.jp/seminar/?mode=seminar_recent">Mathematics--String theory seminar,</a> Kavli IPMU, University of Tokyo. <sc style="font-size:small">[apr 22, '25]</sc></li>
               <li><b>"Drifting towards rational curves"</b>, Algebraic geometry seminar, Tokyo Metropolitan University. <sc style="font-size:small">[apr 18, '25]</sc></li>
